WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
159219
"Total amount is too big" error message is displaying on clicking Pay button
https://bugs.webkit.org/show_bug.cgi?id=159219
Summary
"Total amount is too big" error message is displaying on clicking Pay button
Anders Carlsson
Reported
2016-06-28 12:47:58 PDT
"Total amount is too big" error message is displaying on clicking Pay button
Attachments
Patch
(1.54 KB, patch)
2016-06-28 12:49 PDT
,
Anders Carlsson
thorton
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Anders Carlsson
Comment 1
2016-06-28 12:49:19 PDT
Created
attachment 282270
[details]
Patch
Anders Carlsson
Comment 2
2016-06-28 12:50:23 PDT
Committed
r202582
: <
http://trac.webkit.org/changeset/202582
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug