"Total amount is too big" error message is displaying on clicking Pay button https://bugs.webkit.org/show_bug.cgi?id=159219 rdar://problem/26722110

Reviewed by Tim Horton.

Match the PassKit max amount.

* Modules/applepay/PaymentRequestValidator.cpp:
(WebCore::PaymentRequestValidator::validateTotal):

Canonical link: https://commits.webkit.org/177329@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@202582 268f45cc-cd09-0410-ab3c-d52691b4dbfc